feat: Showing parkings on map

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ParkSmart</title>
+
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
 		integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
 		crossorigin="" />
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
+		integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
+		crossorigin=""></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js"></script>
 
 	<style>
 		body {
@@ -23,32 +31,10 @@
 </head>
 
 <body>
-
-	<div id="mapid" style="width: 100%; height: 100%;">
+	<div id="map" style="width: 100%; height: 100%;">
 	</div>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
-	<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
-		integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
-		crossorigin=""></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js"></script>
+
 	<script src="data.js"></script>
-	<script>
-
-
-
-		var osmUrl = 'https://tile.openstreetmap.org/{z}/{x}/{y}.png',
-			osmAttrib = '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-			osm = L.tileLayer(osmUrl, { maxZoom: 18, attribution: osmAttrib });
-
-		var mymap = L.map('mapid').setView([43.6, 1.43], 15).addLayer(osm);
-
-		L.marker([43.6, 1.43])
-			.addTo(mymap)
-			.bindPopup('Un popup CSS<br />Personnalisable.')
-			.openPopup();
-
-	</script>
 </body>
 
 </html>
